[gd_scene load_steps=4 format=2]

[ext_resource path="res://object_scenes/Simon.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 56, 56 )

[node name="Simon" type="Area2D"]
position = Vector2( -16, -16 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Square0" type="Area2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Square0"]
margin_right = 16.0
margin_bottom = 16.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Square0"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="Square1" type="Area2D" parent="."]
position = Vector2( 32, 0 )

[node name="ColorRect" type="ColorRect" parent="Square1"]
margin_right = 16.0
margin_bottom = 16.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Square1"]
position = Vector2( 7.93688, 8.03346 )
shape = SubResource( 1 )

[node name="Square2" type="Area2D" parent="."]
position = Vector2( 0, 32 )

[node name="ColorRect" type="ColorRect" parent="Square2"]
margin_right = 16.0
margin_bottom = 16.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Square2"]
position = Vector2( 7.93688, 8.03346 )
shape = SubResource( 1 )

[node name="Square3" type="Area2D" parent="."]
position = Vector2( 32, 32 )

[node name="ColorRect" type="ColorRect" parent="Square3"]
margin_right = 16.0
margin_bottom = 16.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Square3"]
position = Vector2( 7.93688, 8.03346 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 24, 24 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Simon_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Simon_body_exited"]
[connection signal="body_entered" from="Square0" to="." method="_on_Square0_body_entered"]
[connection signal="body_entered" from="Square1" to="." method="_on_Square1_body_entered"]
[connection signal="body_entered" from="Square2" to="." method="_on_Square2_body_entered"]
[connection signal="body_entered" from="Square3" to="." method="_on_Square3_body_entered"]
